// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with new info 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      title="the best container ever"
    >
      <span>
        click the 
        <span
          style="font-family:sans-serif;font-size:12px;text-decoration:none;background:#027ac5;color:#fff;padding:5px 15px;margin:10px;border-radius:0px 0px 0px 5px"
        >
           Show Info 
        </span>
         label in top right for info about "with new info"
      </span>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif;color:black;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Button
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            with new info
          </h2>
        </div>
        <div
          style="margin-bottom:0"
        >
          <div
            style="font-size:15px"
          >
            Use the 
            <a
              href="https://github.com/storybooks/storybook/tree/master/addons/info"
              rel="noopener noreferrer"
              style="color:#3498db"
              target="_blank"
            >
              info addon
            </a>
             with its new painless API.
          </div>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;Container
                  </span>
                  <span />
                  <span
                    style="color:#444"
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;span
                    </span>
                    <span />
                    <span
                      style="color:#444"
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style="padding-left:48px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      click the 
                    </span>
                  </div>
                  <div
                    style="padding-left:48px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;InfoButton
                    </span>
                    <span />
                    <span
                      style="color:#444"
                    >
                      /&gt;
                    </span>
                  </div>
                  <div
                    style="padding-left:48px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                       label in top right for info about "
                    </span>
                  </div>
                  <div
                    style="padding-left:48px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      with new info
                    </span>
                  </div>
                  <div
                    style="padding-left:48px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      "
                    </span>
                  </div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;/span&gt;
                    </span>
                  </div>
                </div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;/Container&gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h3
              style="margin:20px 0 0 0"
            >
              "Container" Component
            </h3>
            <table
              class="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="info-table-monospace"
                  >
                    children
                  </td>
                  <td
                    class="info-table-monospace"
                  >
                    <span>
                      node
                    </span>
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                  <td />
                </tr>
                <tr>
                  <td
                    class="info-table-monospace"
                  >
                    isAmazing
                  </td>
                  <td
                    class="info-table-monospace"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td>
                    -
                  </td>
                  <td>
                    <span>
                      false
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td
                    class="info-table-monospace"
                  >
                    age
                  </td>
                  <td
                    class="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td>
                    -
                  </td>
                  <td>
                    <span>
                      {
                      <span>
                        <span>
                          isOld
                        </span>
                      </span>
                      : 
                      <span>
                        false
                      </span>
                      ,
                      <span>
                        <span>
                          value
                        </span>
                      </span>
                      : 
                      <span>
                        0
                      </span>
                      }
                    </span>
                  </td>
                  <td />
                </tr>
                <tr>
                  <td
                    class="info-table-monospace"
                  >
                    title
                  </td>
                  <td
                    class="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td>
                    -
                  </td>
                  <td>
                    <span>
                      the best container ever
                    </span>
                  </td>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h3
              style="margin:20px 0 0 0"
            >
              "InfoButton" Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with notes 1`] = `
<button
  style="border:1px solid #eee;border-radius:3px;background-color:#FFFFFF;cursor:pointer;font-size:15px;padding:3px 10px;margin:10px"
  type="button"
>
  Check my notes in the notes panel
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  style="border:1px solid #eee;border-radius:3px;background-color:#FFFFFF;cursor:pointer;font-size:15px;padding:3px 10px;margin:10px"
  type="button"
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  style="border:1px solid #eee;border-radius:3px;background-color:#FFFFFF;cursor:pointer;font-size:15px;padding:3px 10px;margin:10px"
  type="button"
>
  Hello Button
</button>
`;
